Update README.md with run/compile instructions.